# OOP-2021-RS-4th-sem

lab01-pre/: Figura.h  Kolo.cpp  Kolo.h  Kwadrat.cpp  Kwadrat.h  Trojkat.cpp  Trojkat.h  main.cpp
lab01pre2/: CMakeLists.txt  FElementarne.h  FZlozona.h  Fun.h  Op.h  Rozniczka.h  Trygonometryczne.h  main.cpp
lab02/: CMakeLists.txt  main.cpp
lab02-pre/: CMakeLists.txt  V.cpp  V.h  main.cpp
lab02/include/: W.h
lab02/src/: W.cpp
lab04/: CMakeLists.txt  Funkcje.cpp  Funkcje.h  ZlozenieFunkcji.cpp  ZlozenieFunkcji.h
lab05/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  Shape2D.cpp  Shape2D.h  ShapeContainer.cpp  ShapeContainer.h  Vertex.cpp  Vertex.h  main.cpp
lab05-pre/: CMakeLists.txt  FloatWrapper.h  IntWrapper.h  PArr.h  StringWrapper.h  Wrapper.h  main.cpp
lab05-pre2/: Figura.h  Kolo.h  Kwadrat.h  Trojkat.h  main.cpp
lab06/: CMakeLists.txt  Primitive.cpp  Primitive.h  Product.cpp  Product.h  Ratio.cpp  Ratio.h  Sum.cpp  Sum.h  main.cpp
lab07/: Base.cpp  Base.h  CMakeLists.txt  Dir.cpp  Dir.h  File.cpp  File.h
